# unison

./: .dockerignore  .eslintrc.json  .gitignore  .npmrc  .railwayignore  DEPLOYMENT.md  Dockerfile.api  Dockerfile.frontend  LIVEKIT_SETUP.md  Procfile  README-RAILWAY.md  README.md  docker-compose.yml  docker-entrypoint.sh  nginx.conf  nixpacks.toml  package-lock.json  package.json  railway-deploy.sh  railway-setup.md  railway.json  railway.toml  tsconfig.json  vitest.config.ts
.github/workflows/: railway-deploy.yml  release.yml
.kiro/specs/discord-clone-core/: design.md  requirements.md  tasks.md
.kiro/specs/mini-profile-hover/: design.md  requirements.md  tasks.md
.kiro/specs/svelte-frontend-mvp/: design.md  requirements.md  tasks.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.svelte  App.test.ts  main.ts  types.ts  utils.property.test.ts  utils.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
scripts/: build.sh  run-migration.js
services/api/: package.json  tsconfig.json
services/auth/: package.json
services/channel/: package.json
services/collab/: package.json
services/friends/: package.json
services/gateway/: package.json
services/guild/: package.json
services/messaging/: package.json
services/permissions/: package.json
tests/: tsconfig.json
tests/integration/: e2e-flows.test.ts  full-stack.test.ts  websocket.test.ts
(+227 files in other folders)
